@@ -135,8 +135,9 @@ class Migration(migrations.Migration):
                 ('focal_point_width', models.PositiveIntegerField(blank=True, null=True)),
                 ('focal_point_height', models.PositiveIntegerField(blank=True, null=True)),
                 ('file_size', models.PositiveIntegerField(editable=False, null=True)),
-                ('caption', models.CharField(max_length=255)),
-                ('not_editable_field', models.CharField(max_length=255)),
+                ('caption', models.CharField(max_length=255, blank=True)),
+                ('fancy_caption', wagtail.core.fields.RichTextField(blank=True)),
+                ('not_editable_field', models.CharField(max_length=255, blank=True)),
                 ('tags', taggit.managers.TaggableManager(blank=True, help_text=None, through='taggit.TaggedItem', to='taggit.Tag', verbose_name='tags')),
                 ('uploaded_by_user', models.ForeignKey(blank=True, editable=False, null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL, verbose_name='uploaded by user')),
             ],
